SERVER-56102 Fix SBE bit-test operators to match classic engine for Decimal values